# contest_archive

./: CLAUDE.md  README.md  _여분_개발로드맵.md  _여분_병렬생성계획.md
2026_전국 통합데이터 활용 공모전 /: CLAUDE.md  [붙임1] 참가신청서.hwpx  [붙임2] 참가서약서.hwpx  [붙임3] 개인정보 수집·이용 동의서.hwpx  [붙임4] 서비스 개발 기획서.hwpx  [붙임5] 공모전 설문조사.hwpx  전국 통합데이터 활용 공모전 참가 모집 공고.hwpx
2026_전국 통합데이터 활용 공모전 /docs/: 개발계획서.md  개발보고서.md  검증보고서.md  설문조사.md  제안서.md
2026_전국 통합데이터 활용 공모전 /todo/: 01_공공데이터_API_연동.md  02_Vercel_배포.md  03_시연영상_녹화.md  04_AI_API_연동.md  05_제출서류_작성.md  README.md
_여분_공유/: README.md  tailwind-a11y.config.ts
_여분_공유/components/: Map.tsx
_여분_공유/lib/: local-llm.ts  local_llm.py  local_stt.py  local_tts.py  public-api-proxy.ts
_여분_공유/mock-fixtures/: README.md  air-quality.json  bikes.json  bus-arrival.json  cctv.json  kidslib.json  nursing.json  parking.json  parks.json  senior-halls.json  shelters.json  toilets.json  weather.json  youth-policies.json
_여분_공유/scripts/: capture.mjs
_여분_공유/templates/: CLAUDE.md  개발계획서.md
_여분_전국통합데이터_나들이맵/: CLAUDE.md  아이디어.md  제안서.md
_여분_전국통합데이터_나들이맵/dev/outing-map/: next.config.ts  package.json  pnpm-lock.yaml
_여분_전국통합데이터_나들이맵/docs/: 개발계획서.md
_여분_전국통합데이터_런메이트/: CLAUDE.md  아이디어.md  제안서.md
_여분_전국통합데이터_런메이트/dev/run-mate/: .gitignore  README.md  package.json  pnpm-lock.yaml
_여분_전국통합데이터_런메이트/docs/: 개발계획서.md
_여분_전국통합데이터_실버친구/: CLAUDE.md  아이디어.md  제안서.md
_여분_전국통합데이터_실버친구/dev/silver-friend/: next.config.ts  package.json  tsconfig.json
_여분_전국통합데이터_실버친구/docs/: 개발계획서.md
_여분_전국통합데이터_안심귀가/: CLAUDE.md  아이디어.md  제안서.md
_여분_전국통합데이터_안심귀가/dev/safe-return/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
_여분_전국통합데이터_안심귀가/docs/: 개발계획서.md
_여분_전국통합데이터_청년원스톱/: CLAUDE.md  아이디어.md  제안서.md
_여분_전국통합데이터_청년원스톱/dev/youth-onestop/: .gitignore  README.md  package.json  (+1 more)
_여분_전국통합데이터_청년원스톱/docs/: 개발계획서.md
_여분_현대오토에버_모두대화/: CLAUDE.md  아이디어.md  제안서.md
_여분_현대오토에버_모두대화/docs/: 개발계획서.md
_여분_현대오토에버_모두대화/src/talkforall/: .gitignore  README.md  __init__.py  aac_grid.py  app.py  ksl.py  predictor.py  presets.py  pyproject.toml  tts.py
_여분_현대오토에버_모두대화/src/talkforall/data/: symbols.json
_여분_현대오토에버_수어톡/: CLAUDE.md  아이디어.md  제안서.md
_여분_현대오토에버_수어톡/docs/: 개발계획서.md
_여분_현대오토에버_수어톡/src/sueotalk/: README.md  __init__.py  app.py  avatar.py  holistic.py  ksl_dictionary.py  presets.py  pyproject.toml  stt_runner.py
_여분_현대오토에버_수어톡/src/sueotalk/data/: ksl_500.json
_여분_현대오토에버_쉬운말/: CLAUDE.md  아이디어.md  제안서.md
_여분_현대오토에버_쉬운말/docs/: 개발계획서.md
_여분_현대오토에버_쉬운말/src/easy-read/: README.md  app.py  pyproject.toml
_여분_현대오토에버_쉬운말/src/easy-read/data/: pictogram_map.json
_여분_현대오토에버_쉬운말/src/easy-read/pipeline/: __init__.py  easy_rewrite.py  highlight.py  ocr.py  pictogram.py  structurize.py  tts.py
_여분_현대오토에버_쉬운말/src/easy-read/prompts/: koddi_easy_korean.md
_여분_현대오토에버_시각길잡이/: CLAUDE.md  아이디어.md  제안서.md
_여분_현대오토에버_시각길잡이/docs/: 개발계획서.md
_여분_현대오토에버_시각길잡이/src/sight-guide/: .gitignore  README.md  app.py  detection.py  guidance.py  ocr_crosswalk.py  pyproject.toml  tts_engine.py
_여분_현대오토에버_시각길잡이/src/sight-guide/samples/: README.md
_여분_현대오토에버_휠체어맵/: CLAUDE.md  아이디어.md  제안서.md
_여분_현대오토에버_휠체어맵/docs/: 개발계획서.md
_여분_현대오토에버_휠체어맵/src/wheelmap-kr/: .gitignore  README.md  app.py  poi.py  pyproject.toml  reports.py  routing.py
_여분_현대오토에버_휠체어맵/src/wheelmap-kr/data/: __init__.py  mock_graph.py  mock_poi.py
fintech/: .markdownlint.json  2026년도 국가자격 검정시행안내.hwp  2026년도+사업실명제+대상사업리스트(제4조관련).hwpx  CLAUDE.md  README.md  proposal.md  proposal.v1.md  통합지원실 조교 공개채용 공고문.hwp
fintech/qa/: CODE_REVIEW.md  PROPOSAL_LINT_REPORT.md  README.md  README_VALIDATION.md  REPORT.md  RISK_PROFILE_VERIFICATION.md
fintech/research/: README.md  problems_overview.md  references.md
현대오토에버_배리어프리/: CLAUDE.md
현대오토에버_배리어프리/docs/: 개발계획서.md  개발보고서.md  근거자료_조사.md  제안서.md  참고_제안서_v1.html
(+121 files in other folders)
