[project]
name = "talkforall"
version = "0.1.0"
description = "모두대화 (Talk For All) — AAC 기반 한국어 의사소통 브릿지 Streamlit PoC"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36",
    "httpx>=0.27",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "aac_grid.py", "predictor.py", "tts.py", "ksl.py", "presets.py", "data"]

[tool.ruff]
line-length = 100
target-version = "py311"
