[project]
name = "sight-guide"
version = "0.1.0"
description = "시각길잡이 Streamlit PoC — 온디바이스 YOLO 객체 인식 + 한국어 음성 안내"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sight Guide Team" },
]

dependencies = [
    "streamlit>=1.39",
    "ultralytics>=8.2",
    "Pillow>=10.3",
    "numpy>=1.26",
    "pyttsx3>=2.90",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
]
stt = [
    "faster-whisper>=1.0",
]
tts = [
    "kokoro>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
