[project]
name = "wheelmap-kr"
version = "0.1.0"
description = "WheelMap KR — 휠체어 프로파일 기반 배리어프리 내비게이션 PoC"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "WheelMap KR Team" }]

dependencies = [
    "streamlit>=1.37",
    "streamlit-folium>=0.20",
    "folium>=0.17",
    "networkx>=3.2",
    "geopy>=2.4",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "routing", "poi", "reports"]

[tool.ruff]
line-length = 100
target-version = "py311"
